# practic-png

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  format.sh  global_replace.sh
shaders/csc/pngine/: CMakeLists.txt  clipping.comp  rotating.comp  scaling.comp  triangle.frag  triangle.paths.h  triangle.vert
src/csc/png/: CMakeLists.txt  png.cxx
src/csc/png/commons/: CMakeLists.txt
src/csc/png/commons/buffer/: CMakeLists.txt  buffer.lib.cxx  buffer.range.cxx
src/csc/png/commons/buffer_view/: CMakeLists.txt  buffer_view.lib.cxx  buffer_view.range.cxx
src/csc/png/commons/chunk/: CMakeLists.txt  chunk.attributes.cxx  chunk.cxx  chunk.lib.cxx
src/csc/png/commons/filtering/: CMakeLists.txt  filtering.attributes.cxx  filtering.lib.cxx
src/csc/png/commons/unique_buffer/: CMakeLists.txt  unique_buffer.lib.cxx
src/csc/png/commons/utility/: CMakeLists.txt  utility.lib.cxx
src/csc/png/commons/utility/adler32/: CMakeLists.txt  adler32.lib.cxx
src/csc/png/commons/utility/crc32/: CMakeLists.txt  crc32.lib.cxx
src/csc/png/commons/utility/endian/: CMakeLists.txt  endian.attributes.cxx  endian.lib.cxx
src/csc/png/commons/utility/memory_literals/: CMakeLists.txt  memory_literals.lib.cxx
src/csc/png/commons/utility/pixel_formats/: CMakeLists.txt  pixel_formats.lib.cxx
src/csc/png/commons/utils/: CMakeLists.txt  utils.cxx
src/csc/png/deserializer/: CMakeLists.txt  deserializer.impl.cxx  deserializer.lib.cxx  deserializer.utility.cxx
src/csc/png/deserializer/consume_chunk/: CMakeLists.txt  consume_chunk.lib.cxx  consume_chunk.overloads.cxx  consume_chunk.utility.cxx
src/csc/png/deserializer/consume_chunk/buf_reader/: CMakeLists.txt  buf_reader.attributes.cxx  buf_reader.impl.cxx  buf_reader.lib.cxx
src/csc/png/deserializer/consume_chunk/inflater/: CMakeLists.txt  inflater.attributes.cxx  inflater.cxx  inflater.impl.cxx  inflater.lib.cxx  inflater.utility.cxx
src/csc/png/deserializer/unfilterer/: CMakeLists.txt  unfilterer.lib.cxx
src/csc/png/picture/: CMakeLists.txt  picture.lib.cxx  picture.signature.cxx  png_t.lib.cxx  png_t.signature.cxx
src/csc/png/picture/sections/: CMakeLists.txt  sections.cxx
src/csc/png/picture/sections/IDAT/: CMakeLists.txt  IDAT.lib.cxx
src/csc/png/picture/sections/IEND/: CMakeLists.txt  IEND.lib.cxx
src/csc/png/picture/sections/IHDR/: CMakeLists.txt  IHDR.attributes.cxx  IHDR.lib.cxx
src/csc/png/picture/sections/PLTE/: CMakeLists.txt  PLTE.attributes.cxx  PLTE.lib.cxx
src/csc/png/picture/sections/bKGD/: CMakeLists.txt  bKGD.attributes.cxx  bKGD.lib.cxx
src/csc/png/picture/sections/cHRM/: CMakeLists.txt  cHRM.attributes.cxx  cHRM.lib.cxx
src/csc/png/picture_debug/: CMakeLists.txt  picture_debug.lib.cxx
src/csc/png/picture_debug/write_section_to_ostream/: CMakeLists.txt  write_section_to_ostream.lib.cxx  write_section_to_ostream.overloads.cxx
src/csc/png/png-deserializer/: CMakeLists.txt  png-deserializer.cxx
src/csc/png/png-serializer/: CMakeLists.txt  png-serializer.cxx
src/csc/png/png_t/: CMakeLists.txt  png_t.cxx  png_t.lib.cxx  png_t.signature.cxx
src/csc/png/png_t/sections/: CMakeLists.txt  sections.cxx
src/csc/png/sections/: CMakeLists.txt  sections.cxx
src/csc/png/sections/attributes/: CMakeLists.txt  attributes.cxx
src/csc/png/sections/chunk/: CMakeLists.txt  chunk.cxx
src/csc/png/serializer/: CMakeLists.txt  serializer.impl.cxx  serializer.lib.cxx  serializer.utility.cxx
src/csc/png/serializer/produce_chunk/: CMakeLists.txt  produce_chunk.lib.cxx  produce_chunk.overloads.cxx  produce_chunk.utility.cxx
src/csc/pngine/: CMakeLists.txt  pngine.attributes.cxx  pngine.impl.cxx  pngine.lib.cxx
src/csc/pngine/commons/: CMakeLists.txt
src/csc/pngine/commons/forward/: CMakeLists.txt  device.fwd.cxx
src/csc/pngine/commons/toolbox_params/: CMakeLists.txt  toolbox_params.lib.cxx
src/csc/pngine/commons/utility/: CMakeLists.txt  utility.lib.cxx
src/csc/pngine/debug_reportEXT/: CMakeLists.txt  debug_reportEXT.impl.cxx  debug_reportEXT.lib.cxx  debug_reportEXT.utility.cxx
src/csc/pngine/image_manipulator/: CMakeLists.txt  image_manipulator.lib.cxx  image_manipulator.shaderdata.cxx
src/csc/pngine/instance/: CMakeLists.txt  instance.impl.cxx  instance.lib.cxx  instance.utility.cxx
src/csc/pngine/instance/debug_reportEXT/: CMakeLists.txt  debug_reportEXT.impl.cxx  debug_reportEXT.lib.cxx  debug_reportEXT.utility.cxx
src/csc/pngine/instance/device/: CMakeLists.txt  device.impl.cxx  device.lib.cxx  device.utility.cxx
src/csc/pngine/instance/surfaceKHR/: CMakeLists.txt  surfaceKHR.impl.cxx  surfaceKHR.lib.cxx  surfaceKHR.utility.cxx
src/csc/pngine/vertex/: CMakeLists.txt  vertex.lib.cxx
src/csc/pngine/window_handler/: CMakeLists.txt  glfw_handler.lib.cxx  window_handler.lib.cxx  window_handler.visitors.cxx
src/csc/pngine/window_handler/create_surface/: CMakeLists.txt  create_surface.lib.cxx
src/csc/pngine/window_handler/poll_event/: CMakeLists.txt  poll_event.lib.cxx
src/csc/pngine/window_handler/size_event/: CMakeLists.txt  size_event.lib.cxx
src/csc/pngine/window_handler/win32_handler/: CMakeLists.txt  win32_handler.impl.cxx  win32_handler.lib.cxx
src/csc/pngine/window_handler/xcb_handler/: CMakeLists.txt  xcb_handler.impl.cxx  xcb_handler.lib.cxx  xcb_handler.utility.cxx
src/csc/stl_wrap/: CMakeLists.txt  array.cxx  fstream.cxx  ios.cxx  iostream.cxx  istream.cxx  ostream.cxx  stdexcept.cxx  string.cxx  string_view.cxx  variant.cxx  vector.cxx
src/csc/wnd/: CMakeLists.txt  wnd.lib.cxx
src/csc/wnd/controller/: CMakeLists.txt  controller.lib.cxx
src/csc/wnd/params_parser/: CMakeLists.txt  params_parser.lib.cxx
src/csc/wnd/window_handler/: CMakeLists.txt  glfw_handler.lib.cxx  window_handler.lib.cxx
src/program/: CMakeLists.txt  program.cxx
src/stl/: CMakeLists.txt  array.cxx  deque.cxx  fstream.cxx  ios.cxx  iostream.cxx  istream.cxx  map.cxx  optional.cxx  ostream.cxx  queue.cxx  set.cxx  stack.cxx  stdexcept.cxx  string.cxx  string_view.cxx  stringstream.cxx  variant.cxx  vector.cxx
tests/: CMakeLists.txt  component.test.cxx
(+145 files in other folders)
